added angel pics

--- a/Projects/Cat Tribute Project/Cat index.html
+++ b/Projects/Cat Tribute Project/Cat index.html
@@ -10,7 +10,7 @@
       <h1 id="title">Cats!</h1>
       <p>I <em>Love</em> Cats</p>
       <figure id="img-div">
-        <img id="image" src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" />
+        <img id="image" src="./angel.png" />
         <figcaption id="img-caption">Happy Sleepy Kitty</figcaption>
       </figure>
       <section id="tribute-info">
