added js projects section
added rock paper scissors

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
     <!-- END WELCOME SECTION -->
 
-    <!-- START PROJECTS SECTION -->
+    <!-- START CSS PROJECTS SECTION -->
     <section id="projects" class="projects-section">
-      <h2 class="projects-section-header">These are some of my projects</h2>
+      <h2 class="projects-section-header">These are some of my CSS projects</h2>
 
       <div class="projects-grid">
         <a href= "https://kelseyshuter.github.io/My-First-Repository/Projects/Product%20Landing%20Page/Product%20index.html"
@@ -123,7 +123,90 @@
       </div>
     </section>
 
-    <!-- END PROJECTS SECTION -->
+    <!-- END CSS PROJECTS SECTION -->
+
+    <!-- START JS PROJECTS SECTION-->
+
+    <section id="js-projects" class="projects-section">
+      <h2 class="projects-section-header">These are some of my JS projects</h2>
+
+      <div class="projects-grid">
+        <a href= "https://kelseyshuter.github.io/Javascript-games/Rock-paper-scissors/index.html"
+        target= "_blank"
+        class="project project-tile">
+          <img class="project-image"
+          src= "./images/rock-paper-scissors.png"
+          alt="project" />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Rock Paper Scissors
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+        <a href= "https://kelseyshuter.github.io/Javascript-games/Memory-game/index.html"
+        target= "_blank"
+        class="project project-tile">
+          <img class="project-image"
+          src= "./images/check-back-soon.png"
+          alt="project" />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Memory Game
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+        <a href= "https://kelseyshuter.github.io/Javascript-games/Breakout/index.html"
+        target= "_blank"
+        class="project project-tile">
+          <img class="project-image"
+          src= "./images/check-back-soon.png"
+          alt="project" />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Breakout
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+        <a href= "https://kelseyshuter.github.io/Javascript-games/Frogger/index.html"
+        target= "_blank"
+        class="project project-tile">
+          <img class="project-image"
+          src= "./images/check-back-soon.png"
+          alt="project" />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Frogger
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+        <a href= "https://kelseyshuter.github.io/Javascript-games/Connect-four/index.html"
+        target= "_blank"
+        class="project project-tile">
+          <img class="project-image"
+          src= "./images/check-back-soon.png"
+          alt="project" />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Connect Four
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+        <a href= "https://kelseyshuter.github.io/Javascript-games/Space-invaders/index.html"
+        target= "_blank"
+        class="project project-tile">
+          <img class="project-image"
+          src= "./images/check-back-soon.png"
+          alt="project" />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Space Invaders
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+      </div>
+    </section>
+
+    <!-- END JS PROJECTS SECTION-->
 
     <!-- START CONTACT SECTION -->
 
