--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         target= "_blank"
         class="project project-tile">
           <img class="project-image"
-          src= "./images/check-back-soon.png"
+          src= "./images/memory-game.png"
           alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
