--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
-        <a href= "https://kelseyshuter.github.io/Javascript-games/Breakout/index.html"
+        <a href= "https://kelseyshuter.github.io/Javascript-games/Breakout-2/index.html"
         target= "_blank"
         class="project project-tile">
           <img class="project-image"
-          src= "./images/check-back-soon.png"
+          src= "./images/breakout.png"
           alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
