fixed contact links

--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
         target="_blank"
         class="btn contact-details">
         <i class="fab fa-github"></i> GitHub </a>
+        <!-- <a 
+        href="/cdn-cgi/l/email-protection#95f0edf4f8e5f9f0d5f0edf4f8e5f9f0bbf6faf8"
+        target="_blank"
+        class="btn contact-details">
+        <i class="fab fa-at"></i> Email </a> -->
         
       </div>
     </section>
