added blender donut project

--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
 
     <!-- END WELCOME SECTION -->
 
+    <!-- START BLENDER PROJECTS SECTION -->
+    <section id="blender-projects" class="projects-section">
+      <h2 class="projects-section-header">These are some of my Blender projects</h2>
+
+      <div class="projects-grid">
+        <a></a>
+        <a href= "https://kelseyshuter.github.io/Portfolio/Blender/donut-animation/index.html"
+        target= "_blank"
+        class="project project-tile">
+          <img class="project-image"
+          src= "./images/donut.png"
+          alt="project" />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Belnder Donut
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>        
+        <a></a>
+      </div>
+    </section>
+
+    <!-- END BLENDER PROJECTS SECTION -->
+
     <!-- START CSS PROJECTS SECTION -->
     <section id="projects" class="projects-section">
       <h2 class="projects-section-header">These are some of my CSS projects</h2>
