--- a/Blender/donut-animation/index.html
+++ b/Blender/donut-animation/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Title</title>
+    <title>Blender Donut</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://kit.fontawesome.com/e61363cb15.js" crossorigin="anonymous"></script>
   </head>
