loop donut video

--- a/Blender/donut-animation/index.html
+++ b/Blender/donut-animation/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
         <div id="video-player">
-            <video id="donut-video" controls autoplay>
+            <video id="donut-video" controls autoplay loop>
                 <source src="./2-final-animation0001-0300.mp4" type="video/mp4">
             </video>
         </div>
